# DEPP_SFA

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
SFA/: pySFA.py  tools.py
depp_sfa/: __init__.py  depp_sfa.py
depp_sfa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/source/: conf.py  index.rst
