[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depp_sfa"
version = "0.1.0"
authors = [
  { name="Thomas Lucereau", email="divers.thomas.lcu@gmail.com" },
]
description = "A  Stochastic Frontier Analysis (SFA) library featuring MLE and Bayesian (PyMC) estimations."
readme = "README.md"
requires-python = ">=3.8"


keywords = [
    "econometrics", 
    "competition economics", 
    "microeconomics", 
    "stochastic frontier analysis", 
    "efficiency", 
    "panel data"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "pymc"
]

[project.urls]
"Homepage" = "https://github.com/ThomasLucereau/DEPP_SFA"
"Bug Tracker" = "https://github.com/ThomasLucereau/DEPP_SFA/issues"